package ophelia.collections.set;

import ophelia.collections.ModifiableCollection;
import ophelia.collections.iterator.BaseIterator;

/**
 * @author Steven Weston
 */
public interface ModifiableSet<E> extends BaseSet<E>, ModifiableCollection<E> {

}
