package ophelia.collections.set;

import ophelia.collections.IntegerFiniteCollection;
import ophelia.collections.iterator.BaseIterator;

/**
 * @author Steven Weston
 */
public interface BaseSet<E, I extends BaseIterator<E>> extends IntegerFiniteCollection<E, I> {

}
